--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-tooltip": "^5.11.1",
     "web-vitals": "^2.1.4"
   },
