--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "browser-image-compression": "^2.0.2",
     "firebase": "^9.22.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
     "react-responsive-carousel": "^3.2.23",
